@@ -19,6 +19,7 @@ import qualified Data.Set as S
 
 import Annex.Common
 import Logs.TimeStamp
+import Logs.Line
 
 transitionsLog :: FilePath
 transitionsLog = "transitions.log"
@@ -50,7 +51,7 @@ showTransitions = unlines . map showTransitionLine . S.elems
 
 {- If the log contains new transitions we don't support, returns Nothing. -}
 parseTransitions :: String -> Maybe Transitions
-parseTransitions = check . map parseTransitionLine . lines
+parseTransitions = check . map parseTransitionLine . splitLines
   where
 	check l
 		| all isJust l = Just $ S.fromList $ catMaybes l
